Avoid color jump at the begining of the priority bar

--- a/src/components/pdf-reports/national-report-pdf/national-report-pdf.module.scss
+++ b/src/components/pdf-reports/national-report-pdf/national-report-pdf.module.scss
@@ -261,7 +261,6 @@ $gap: 20pt;
     .priorityIcon {
       height: 100pt;
       width: 12pt;
-      border-radius: 2px;
       background: $biodiversity-gradient;
     }
 
